fix: collapsing lines when whole text is <sub> or <sup>
# Conflicts:
#	scss/inc/_base.scss

--- a/scss/inc/_base.scss
+++ b/scss/inc/_base.scss
@@ -210,8 +210,7 @@ body {
 
     sub,
     sup {
-        font-size: .75rem;
-        line-height: 0;
+        font-size: .75em;
         position: relative;
         vertical-align: baseline;
     }
